Nicer teaser formatting

--- a/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
+++ b/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
@@ -12,11 +12,12 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_Postgres logical replication, while powerful for capturing real-time data changes, presents challenges with TOAST columns,
+[.teaser]
+Postgres logical replication, while powerful for capturing real-time data changes, presents challenges with TOAST columns,
 whose values can be absent from data change events in specific situations.
 This post discusses how Debezium addresses this through its built-in reselect post processor,
 then explores more robust solutions leveraging Apache Flink's capabilities for stateful stream processing,
-including Flink SQL and the brand-new process table functions (PTFs) in Flink 2.1._
+including Flink SQL and the brand-new process table functions (PTFs) in Flink 2.1.
 
 <!--more-->
 
