--- a/content/blog/building-native-binary-for-apache-kafka-macos.asciidoc
+++ b/content/blog/building-native-binary-for-apache-kafka-macos.asciidoc
@@ -12,10 +12,11 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_With help of the GraalVM configuration developed for KIP-974 (Docker Image for GraalVM based Native Kafka Broker),
+[.teaser]
+With help of the GraalVM configuration developed for KIP-974 (Docker Image for GraalVM based Native Kafka Broker),
 you can easily build a self-contained native binary for Apache Kafka.
 Read on to learn how you can build a native Kafka executable yourself,
-starting in milli-seconds, making it a perfect fit for development and testing purposes_.
+starting in milli-seconds, making it a perfect fit for development and testing purposes.
 
 When I wrote about link:/blog/jep-483-aot-class-loading-linking/[ahead-of-time class loading and linking in Java 24] recently,
 I also published the start-up time for Apache Kafka as a native binary for comparison.
