--- a/content/blog/future-to-completablefuture-with-java-virtual-threads.asciidoc
+++ b/content/blog/future-to-completablefuture-with-java-virtual-threads.asciidoc
@@ -12,7 +12,8 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post explores how virtual threads in Java 21+ provide an elegant solution for converting legacy `Future` objects into `CompletableFuture` instances._
+[.teaser]
+This post explores how virtual threads in Java 21+ provide an elegant solution for converting legacy `Future` objects into `CompletableFuture` instances.
 
 Since Java 8, the https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/util/concurrent/CompletableFuture.html[`CompletableFuture`] API provides a convenient way for performing asynchronous operations in a functional, composable way.
 This makes it very simple to call some long-running methods--for instance involving external I/O--asynchronously and process each result as soon as it is available, without blocking on any threads:
