--- a/content/blog/how-i-built-a-serverless-search-for-my-blog.asciidoc
+++ b/content/blog/how-i-built-a-serverless-search-for-my-blog.asciidoc
@@ -12,13 +12,14 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_I have built a custom search functionality for this blog,
+[.teaser]
+I have built a custom search functionality for this blog,
 based on Java and the Apache Lucene full-text search library,
 compiled into a native binary using the Quarkus framework and GraalVM.
 It is deployed as a Serverless application running on AWS Lambda,
 providing search results without any significant cold start delay.
 If you thought Java wouldn't be the right language for this job, keep reading;
-in this post I'm going to give an overview over the implementation of this feature and my learnings along the way._
+in this post I'm going to give an overview over the implementation of this feature and my learnings along the way.
 
 <!--more-->
 
