--- a/content/blog/lower-java-tail-latencies-with-zgc.asciidoc
+++ b/content/blog/lower-java-tail-latencies-with-zgc.asciidoc
@@ -12,7 +12,8 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_In the "Let's Take a Look at...!" blog series I am exploring interesting projects, developments and technologies in the data and streaming space. This can be KIPs and FLIPs, open-source projects, services, relevant improvements to Java and the JVM, and more. The idea is to get some hands-on experience, learn about potential use cases and applications, and understand the trade-offs involved. If you think there's a specific subject I should take a look at, let me know in the comments below._
+[.teaser]
+In the "Let's Take a Look at...!" blog series I am exploring interesting projects, developments and technologies in the data and streaming space. This can be KIPs and FLIPs, open-source projects, services, relevant improvements to Java and the JVM, and more. The idea is to get some hands-on experience, learn about potential use cases and applications, and understand the trade-offs involved. If you think there's a specific subject I should take a look at, let me know in the comments below.
 
 Java 25 https://www.oracle.com/news/announcement/oracle-releases-java-25-2025-09-16/[was released] earlier this week,
 and it is the first Java release with long-term support (LTS) which ships with Generational ZGC as the one (and only) flavor of the ZGC garbage collector.
