--- a/content/blog/this-ai-agent-should-have-been-sql-query.asciidoc
+++ b/content/blog/this-ai-agent-should-have-been-sql-query.asciidoc
@@ -12,7 +12,8 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_AI Agents have improved in leaps and bounds in recent times, moving beyond simple chatbots to sophisticated, autonomous systems. This post explores a novel approach to building agentic systems: using the power of streaming SQL queries. Discover how platforms like Apache Flink can transform the development of AI Agents, offering benefits in consistency, scalability, and developer experience._
+[.teaser]
+AI Agents have improved in leaps and bounds in recent times, moving beyond simple chatbots to sophisticated, autonomous systems. This post explores a novel approach to building agentic systems: using the power of streaming SQL queries. Discover how platforms like Apache Flink can transform the development of AI Agents, offering benefits in consistency, scalability, and developer experience.
 
 <!--more-->
 
