Adding list of related posts

--- a/content/blog/1brc-results-are-in.asciidoc
+++ b/content/blog/1brc-results-are-in.asciidoc
@@ -3,6 +3,11 @@ title: "1BRC—The Results Are In!"
 date: 2024-02-04T16:34:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - performance
+  - challenge
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
