--- a/content/blog/announcing-first-release-of-kcctl.asciidoc
+++ b/content/blog/announcing-first-release-of-kcctl.asciidoc
@@ -3,6 +3,11 @@ title: "Announcing the First Release of kcctl"
 date: 2021-12-21T17:48:00+01:00
 draft: false
 markup: adoc
+tags:
+  - kafka
+  - kafka-connect
+  - tooling
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
