--- a/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
+++ b/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
@@ -3,6 +3,12 @@ title: "Backfilling Postgres TOAST Columns in Debezium Data Change Events"
 date: 2025-05-26T16:40:00+02:00
 draft: false
 markup: adoc
+tags:
+  - postgres
+  - debezium
+  - cdc
+  - flink
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
