--- a/content/blog/building-hsdis-for-openjdk-15.asciidoc
+++ b/content/blog/building-hsdis-for-openjdk-15.asciidoc
@@ -3,6 +3,12 @@ title: "Building hsdis for OpenJDK 15"
 date: 2020-10-05T20:30:00+02:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - openjdk
+  - performance
+  - build-tools
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
