--- a/content/blog/building-native-binary-for-apache-kafka-macos.asciidoc
+++ b/content/blog/building-native-binary-for-apache-kafka-macos.asciidoc
@@ -3,6 +3,12 @@ title: "Building a Native Binary for Apache Kafka on macOS"
 date: 2025-04-07T12:25:00+02:00
 draft: false
 markup: adoc
+tags:
+  - kafka
+  - graalvm
+  - native-image
+  - performance
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
