--- a/content/blog/building-openjdk-from-source-on-macos.asciidoc
+++ b/content/blog/building-openjdk-from-source-on-macos.asciidoc
@@ -3,6 +3,11 @@ title: "Building OpenJDK From Source On macOS"
 date: 2024-11-16T15:25:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - openjdk
+  - build-tools
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
