--- a/content/blog/can-debezium-lose-events.asciidoc
+++ b/content/blog/can-debezium-lose-events.asciidoc
@@ -3,6 +3,11 @@ title: "Can Debezium Lose Events?"
 date: 2023-11-14T15:00:00+01:00
 draft: false
 markup: adoc
+tags:
+  - debezium
+  - cdc
+  - reliability
+
 aliases:
 - "/blog/can-debezium-loose-events"
 ---
