--- a/content/blog/class-unloading-in-layered-java-applications.asciidoc
+++ b/content/blog/class-unloading-in-layered-java-applications.asciidoc
@@ -3,6 +3,11 @@ title: "Class Unloading in Layered Java Applications"
 date: 2020-10-14T17:45:00+02:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jpms
+  - plugin-architecture
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
