--- a/content/blog/debezium-talks-2021.asciidoc
+++ b/content/blog/debezium-talks-2021.asciidoc
@@ -3,6 +3,11 @@ title: "Debezium and Friends – Conference Talks 2021"
 date: 2021-11-02T10:50:00+01:00
 draft: false
 markup: adoc
+tags:
+  - debezium
+  - cdc
+  - conferences
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
