--- a/content/blog/filtering-process-output-with-tee.asciidoc
+++ b/content/blog/filtering-process-output-with-tee.asciidoc
@@ -3,6 +3,11 @@ title: "Filtering Process Output With tee"
 date: 2024-02-10T11:11:00+01:00
 draft: false
 markup: adoc
+tags:
+  - shell
+  - linux
+  - logging
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
