--- a/content/blog/finding-java-thread-leaks-with-jdk-flight-recorder-and-bit-of-sql.asciidoc
+++ b/content/blog/finding-java-thread-leaks-with-jdk-flight-recorder-and-bit-of-sql.asciidoc
@@ -3,6 +3,12 @@ title: "Finding Java Thread Leaks With JDK Flight Recorder and a Bit Of SQL"
 date: 2023-02-28T22:16:10+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jfr
+  - troubleshooting
+  - performance
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
