--- a/content/blog/future-to-completablefuture-with-java-virtual-threads.asciidoc
+++ b/content/blog/future-to-completablefuture-with-java-virtual-threads.asciidoc
@@ -3,6 +3,11 @@ title: "Converting Future to CompletableFuture With Java Virtual Threads"
 date: 2025-07-17T10:25:00+02:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - concurrency
+  - virtual-threads
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
