--- a/content/blog/how-i-am-setting-up-vms-on-hetzner-cloud.asciidoc
+++ b/content/blog/how-i-am-setting-up-vms-on-hetzner-cloud.asciidoc
@@ -3,6 +3,11 @@ title: "How I Am Setting Up VMs On Hetzner Cloud"
 date: 2024-10-06T20:25:00+02:00
 draft: false
 markup: adoc
+tags:
+  - cloud
+  - infrastructure
+  - automation
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
