--- a/content/blog/how-i-built-a-serverless-search-for-my-blog.asciidoc
+++ b/content/blog/how-i-built-a-serverless-search-for-my-blog.asciidoc
@@ -3,6 +3,12 @@ title: "How I Built a Serverless Search for My Blog"
 date: 2020-07-29T17:30:00+02:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - quarkus
+  - serverless
+  - graalvm
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
