--- a/content/blog/ideation-kubernetes-native-kafka-connect.asciidoc
+++ b/content/blog/ideation-kubernetes-native-kafka-connect.asciidoc
@@ -3,6 +3,11 @@ title: "An Ideation for Kubernetes-native Kafka Connect"
 date: 2022-09-06T14:20:00+01:00
 draft: false
 markup: adoc
+tags:
+  - kafka
+  - kafka-connect
+  - kubernetes
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
