--- a/content/blog/ingesting-debezium-events-from-kafka-with-flink-sql.asciidoc
+++ b/content/blog/ingesting-debezium-events-from-kafka-with-flink-sql.asciidoc
@@ -3,6 +3,12 @@ title: "A Deep Dive Into Ingesting Debezium Events From Kafka With Flink SQL"
 date: 2025-04-16T11:25:00+02:00
 draft: false
 markup: adoc
+tags:
+  - debezium
+  - flink
+  - kafka
+  - cdc
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
