--- a/content/blog/insatiable-postgres-replication-slot.asciidoc
+++ b/content/blog/insatiable-postgres-replication-slot.asciidoc
@@ -3,6 +3,11 @@ title: "The Insatiable Postgres Replication Slot"
 date: 2022-11-30T14:00:00+01:00
 draft: false
 markup: adoc
+tags:
+  - postgres
+  - cdc
+  - troubleshooting
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
