--- a/content/blog/introducing-jmfrx-a-bridge-from-jmx-to-jdk-flight-recorder.asciidoc
+++ b/content/blog/introducing-jmfrx-a-bridge-from-jmx-to-jdk-flight-recorder.asciidoc
@@ -3,6 +3,12 @@ title: "Introducing JmFrX: A Bridge From JMX to JDK Flight Recorder"
 date: 2020-08-18T17:30:00+02:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jfr
+  - jmx
+  - monitoring
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
