--- a/content/blog/introducing-layrry-runner-and-api-for-modularized-java-applications.asciidoc
+++ b/content/blog/introducing-layrry-runner-and-api-for-modularized-java-applications.asciidoc
@@ -3,6 +3,11 @@ title: "Introducing Layrry: A Launcher and API for Modularized Java Applications
 date: 2020-03-29T21:31:00+02:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jpms
+  - plugin-architecture
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
