--- a/content/blog/jep-483-aot-class-loading-linking.asciidoc
+++ b/content/blog/jep-483-aot-class-loading-linking.asciidoc
@@ -3,6 +3,11 @@ title: "Let's Take a Look at... JEP 483: Ahead-of-Time Class Loading & Linking!"
 date: 2025-03-27T14:00:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - performance
+  - aot
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
