--- a/content/blog/jfr-events-in-graalvm-native-binaries.asciidoc
+++ b/content/blog/jfr-events-in-graalvm-native-binaries.asciidoc
@@ -3,6 +3,12 @@ title: "JDK Flight Recorder Events in GraalVM Native Binaries"
 date: 2021-11-12T18:30:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jfr
+  - graalvm
+  - native-image
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
