--- a/content/blog/jlinks-missing-link-api-signature-validation.asciidoc
+++ b/content/blog/jlinks-missing-link-api-signature-validation.asciidoc
@@ -3,6 +3,11 @@ title: "jlink's Missing Link: API Signature Validation"
 date: 2020-12-28T12:20:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jlink
+  - validation
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
