--- a/content/blog/kip-932-queues-for-kafka.asciidoc
+++ b/content/blog/kip-932-queues-for-kafka.asciidoc
@@ -3,6 +3,11 @@ title: "Let's Take a Look at... KIP-932: Queues for Kafka!"
 date: 2025-03-05T12:35:00+01:00
 draft: false
 markup: adoc
+tags:
+  - kafka
+  - streaming
+  - queues
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
