--- a/content/blog/last-updated-columns-with-postgres.asciidoc
+++ b/content/blog/last-updated-columns-with-postgres.asciidoc
@@ -3,6 +3,10 @@ title: "Last Updated Columns With Postgres"
 date: 2024-02-20T09:15:00+01:00
 draft: false
 markup: adoc
+tags:
+  - postgres
+  - database-design
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
