--- a/content/blog/leader-election-with-s3-conditional-writes.asciidoc
+++ b/content/blog/leader-election-with-s3-conditional-writes.asciidoc
@@ -3,6 +3,11 @@ title: "Leader Election With S3 Conditional Writes"
 date: 2024-08-26T09:15:00+01:00
 draft: false
 markup: adoc
+tags:
+  - distributed-systems
+  - aws
+  - algorithms
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
