--- a/content/blog/mastering-postgres-replication-slots.asciidoc
+++ b/content/blog/mastering-postgres-replication-slots.asciidoc
@@ -3,6 +3,12 @@ title: "Mastering Postgres Replication Slots: Preventing WAL Bloat and Other Pro
 date: 2025-07-08T13:55:00+02:00
 draft: false
 markup: adoc
+tags:
+  - postgres
+  - cdc
+  - debezium
+  - replication
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
