--- a/content/blog/maven-what-are-you-waiting-for.asciidoc
+++ b/content/blog/maven-what-are-you-waiting-for.asciidoc
@@ -3,6 +3,12 @@ title: "Maven, What Are You Waiting For?!"
 date: 2022-12-18T13:45:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - maven
+  - flink
+  - build-tools
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
