--- a/content/blog/on-idempotency-keys.asciidoc
+++ b/content/blog/on-idempotency-keys.asciidoc
@@ -3,6 +3,11 @@ title: "On Idempotency Keys"
 date: 2025-11-25T13:10:00+01:00
 draft: false
 markup: adoc
+tags:
+  - distributed-systems
+  - reliability
+  - patterns
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
