--- a/content/blog/one-billion-row-challenge.asciidoc
+++ b/content/blog/one-billion-row-challenge.asciidoc
@@ -3,6 +3,11 @@ title: "The One Billion Row Challenge"
 date: 2024-01-01T00:00:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - performance
+  - challenge
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
