--- a/content/blog/refining-return-type-java-methods-without-breaking-backwards-compatibility.asciidoc
+++ b/content/blog/refining-return-type-java-methods-without-breaking-backwards-compatibility.asciidoc
@@ -3,6 +3,11 @@ title: "Refining The Return Type Of Java Methods Without Breaking Backwards-Comp
 date: 2021-11-22T18:30:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - api-design
+  - compatibility
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
