--- a/content/blog/rest-api-monitoring-with-custom-jdk-flight-recorder-events.asciidoc
+++ b/content/blog/rest-api-monitoring-with-custom-jdk-flight-recorder-events.asciidoc
@@ -4,6 +4,12 @@ date: 2020-01-29T15:30:00+01:00
 draft: false
 tags: [java, monitoring, microprofile, jakartaee, quarkus]
 markup: adoc
+tags:
+  - java
+  - jfr
+  - monitoring
+  - quarkus
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
