--- a/content/blog/reworking-git-branches-with-git-filter-branch.asciidoc
+++ b/content/blog/reworking-git-branches-with-git-filter-branch.asciidoc
@@ -3,6 +3,10 @@ title: "Reworking Git Branches with git filter-branch"
 date: 2020-03-16T00:00:10+01:00
 draft: false
 markup: adoc
+tags:
+  - git
+  - tooling
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
