--- a/content/blog/running-jmc-on-apple-m1.asciidoc
+++ b/content/blog/running-jmc-on-apple-m1.asciidoc
@@ -3,6 +3,11 @@ title: "Running JDK Mission Control on Apple M1"
 date: 2022-05-17T09:20:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jfr
+  - tooling
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
