--- a/content/blog/running-quarkus-native-app-on-render.asciidoc
+++ b/content/blog/running-quarkus-native-app-on-render.asciidoc
@@ -3,6 +3,12 @@ title: "Running a Quarkus Native Application on Render"
 date: 2022-11-28T11:45:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - quarkus
+  - graalvm
+  - deployment
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
