--- a/content/blog/ten-tips-make-conference-talks-suck-less.asciidoc
+++ b/content/blog/ten-tips-make-conference-talks-suck-less.asciidoc
@@ -3,6 +3,10 @@ title: "Ten Tips to Make Conference Talks Suck Less"
 date: 2022-06-23T10:15:00+01:00
 draft: false
 markup: adoc
+tags:
+  - speaking
+  - conferences
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
