--- a/content/blog/testing-kafka-connectors.asciidoc
+++ b/content/blog/testing-kafka-connectors.asciidoc
@@ -3,6 +3,11 @@ title: "Testing Kafka Connectors"
 date: 2022-08-25T09:20:00+01:00
 draft: false
 markup: adoc
+tags:
+  - kafka
+  - kafka-connect
+  - testing
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
