--- a/content/blog/the-anatomy-of-ct-sym-how-javac-ensures-backwards-compatibility.asciidoc
+++ b/content/blog/the-anatomy-of-ct-sym-how-javac-ensures-backwards-compatibility.asciidoc
@@ -3,6 +3,11 @@ title: "The Anatomy of ct.sym — How javac Ensures Backwards Compatibility"
 date: 2021-04-26T18:45:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - compatibility
+  - internals
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
