--- a/content/blog/the-code-review-pyramid.asciidoc
+++ b/content/blog/the-code-review-pyramid.asciidoc
@@ -3,6 +3,10 @@ title: "The Code Review Pyramid"
 date: 2022-03-10T16:45:00+01:00
 draft: false
 markup: adoc
+tags:
+  - software-engineering
+  - code-review
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
