--- a/content/blog/this-ai-agent-should-have-been-sql-query.asciidoc
+++ b/content/blog/this-ai-agent-should-have-been-sql-query.asciidoc
@@ -3,6 +3,12 @@ title: "This AI Agent Should Have Been a SQL Query"
 date: 2025-06-18T15:30:00+02:00
 draft: false
 markup: adoc
+tags:
+  - ai
+  - flink
+  - streaming
+  - sql
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
