--- a/content/blog/thoughts-on-moving-debezium-to-commonhaus-foundation.asciidoc
+++ b/content/blog/thoughts-on-moving-debezium-to-commonhaus-foundation.asciidoc
@@ -3,6 +3,11 @@ title: "Thoughts On Moving Debezium to the Commonhaus Foundation"
 date: 2024-11-27T17:25:00+01:00
 draft: false
 markup: adoc
+tags:
+  - debezium
+  - open-source
+  - governance
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
