--- a/content/blog/three-plus-some-lovely-kafka-trends.asciidoc
+++ b/content/blog/three-plus-some-lovely-kafka-trends.asciidoc
@@ -3,6 +3,11 @@ title: "Three Plus Some Lovely Kafka Trends"
 date: 2021-05-28T10:30:00+02:00
 draft: false
 markup: adoc
+tags:
+  - kafka
+  - kafka-connect
+  - streaming
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
