--- a/content/blog/towards-continuous-performance-regression-testing.asciidoc
+++ b/content/blog/towards-continuous-performance-regression-testing.asciidoc
@@ -3,6 +3,12 @@ title: "Towards Continuous Performance Regression Testing"
 date: 2020-12-16T17:45:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jfr
+  - testing
+  - performance
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
