--- a/content/blog/tracking-java-native-memory-with-jdk-flight-recorder.asciidoc
+++ b/content/blog/tracking-java-native-memory-with-jdk-flight-recorder.asciidoc
@@ -3,6 +3,12 @@ title: "Tracking Java Native Memory With JDK Flight Recorder"
 date: 2023-12-17T19:29:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jfr
+  - performance
+  - monitoring
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
