--- a/content/blog/what-if-we-could-rebuild-kafka-from-scratch.asciidoc
+++ b/content/blog/what-if-we-could-rebuild-kafka-from-scratch.asciidoc
@@ -3,6 +3,11 @@ title: "What If We Could Rebuild Kafka From Scratch?"
 date: 2025-04-24T16:25:00+02:00
 draft: false
 markup: adoc
+tags:
+  - kafka
+  - architecture
+  - streaming
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
