--- a/content/blog/whats-on-my-desk.asciidoc
+++ b/content/blog/whats-on-my-desk.asciidoc
@@ -3,6 +3,10 @@ title: "What's on My Desk?"
 date: 2021-10-24T10:30:00+02:00
 draft: false
 markup: adoc
+tags:
+  - workspace
+  - hardware
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
