--- a/content/blog/you-dont-need-kafka-just-use-postgres-considered-harmful.asciidoc
+++ b/content/blog/you-dont-need-kafka-just-use-postgres-considered-harmful.asciidoc
@@ -3,6 +3,12 @@ title: "\"You Don't Need Kafka, Just Use Postgres\" Considered Harmful"
 date: 2025-11-03T18:02:00+01:00
 draft: false
 markup: adoc
+tags:
+  - kafka
+  - postgres
+  - architecture
+  - streaming
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
