--- a/content/blog/you-gotta-push-if-you-wanna-pull.asciidoc
+++ b/content/blog/you-gotta-push-if-you-wanna-pull.asciidoc
@@ -3,6 +3,12 @@ title: "You Gotta Push If You Wanna Pull"
 date: 2025-12-07T10:05:00+01:00
 draft: false
 markup: adoc
+tags:
+  - streaming
+  - cdc
+  - materialized-views
+  - architecture
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
