--- a/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
+++ b/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
@@ -3,6 +3,12 @@ title: "Building Class Data Sharing Archives with Apache Maven"
 date: 2020-06-11T17:30:00+02:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - performance
+  - maven
+  - appcds
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
