--- a/content/blog/building-durable-execution-engine-with-sqlite.asciidoc
+++ b/content/blog/building-durable-execution-engine-with-sqlite.asciidoc
@@ -3,6 +3,11 @@ title: "Building a Durable Execution Engine With SQLite"
 date: 2025-11-20T13:10:00+01:00
 draft: false
 markup: adoc
+tags:
+  - sqlite
+  - durable-execution
+  - architecture
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
