--- a/content/blog/bytebuffer-and-the-dreaded-nosuchmethoderror.asciidoc
+++ b/content/blog/bytebuffer-and-the-dreaded-nosuchmethoderror.asciidoc
@@ -3,6 +3,11 @@ title: "ByteBuffer and the Dreaded NoSuchMethodError"
 date: 2020-12-21T17:45:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - compatibility
+  - troubleshooting
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
