--- a/content/blog/cdc-is-a-feature-not-a-product.asciidoc
+++ b/content/blog/cdc-is-a-feature-not-a-product.asciidoc
@@ -3,6 +3,11 @@ title: "CDC Is a Feature Not a Product"
 date: 2024-10-18T15:55:00+02:00
 draft: false
 markup: adoc
+tags:
+  - cdc
+  - debezium
+  - architecture
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
