--- a/content/blog/executable-javadoc-code-snippets.asciidoc
+++ b/content/blog/executable-javadoc-code-snippets.asciidoc
@@ -3,6 +3,11 @@ title: "Executable JavaDoc Code Snippets"
 date: 2021-10-18T08:30:00+02:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - documentation
+  - tooling
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
