--- a/content/blog/extracting-and-propagating-multiple-values-with-jq.asciidoc
+++ b/content/blog/extracting-and-propagating-multiple-values-with-jq.asciidoc
@@ -3,6 +3,11 @@ title: "Shell Spell: Extracting and Propagating Multiple Values With jq"
 date: 2024-07-06T11:20:00+02:00
 draft: false
 markup: adoc
+tags:
+  - shell
+  - jq
+  - terraform
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
