--- a/content/blog/getting-started-with-java-development-2023.asciidoc
+++ b/content/blog/getting-started-with-java-development-2023.asciidoc
@@ -3,6 +3,11 @@ title: "Getting Started With Java Development in 2023 — An Opinionated Guide"
 date: 2023-01-15T22:10:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - tooling
+  - getting-started
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
