--- a/content/blog/introducing-oss-quickstart-archetype.asciidoc
+++ b/content/blog/introducing-oss-quickstart-archetype.asciidoc
@@ -3,6 +3,11 @@ title: "Introducing the OSS Quickstart Archetype"
 date: 2021-12-02T18:30:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - maven
+  - tooling
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
