--- a/content/blog/is-your-blocking-queue-blocking.asciidoc
+++ b/content/blog/is-your-blocking-queue-blocking.asciidoc
@@ -3,6 +3,11 @@ title: "Is your Blocking Queue... Blocking?"
 date: 2023-01-03T22:10:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - concurrency
+  - sqlite
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
