--- a/content/blog/jdk-flight-recorder-file-format.asciidoc
+++ b/content/blog/jdk-flight-recorder-file-format.asciidoc
@@ -3,6 +3,11 @@ title: "The JDK Flight Recorder File Format"
 date: 2022-02-20T21:15:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jfr
+  - internals
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
