--- a/content/blog/kafka-where-art-thou.asciidoc
+++ b/content/blog/kafka-where-art-thou.asciidoc
@@ -3,6 +3,11 @@ title: "O Kafka, Where Art Thou?"
 date: 2021-11-29T18:55:00+01:00
 draft: false
 markup: adoc
+tags:
+  - kafka
+  - reliability
+  - error-handling
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
