--- a/content/blog/loom-and-thread-fairness.asciidoc
+++ b/content/blog/loom-and-thread-fairness.asciidoc
@@ -3,6 +3,11 @@ title: "Loom and Thread Fairness"
 date: 2022-05-27T09:20:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - concurrency
+  - virtual-threads
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
