--- a/content/blog/oh_this_is_prod.asciidoc
+++ b/content/blog/oh_this_is_prod.asciidoc
@@ -3,6 +3,11 @@ title: "Oh... This is Prod?!"
 date: 2023-01-05T22:10:00+01:00
 draft: false
 markup: adoc
+tags:
+  - aws
+  - shell
+  - tooling
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
