--- a/content/blog/plugin-architectures-with-layrry-and-the-java-module-system.asciidoc
+++ b/content/blog/plugin-architectures-with-layrry-and-the-java-module-system.asciidoc
@@ -3,6 +3,11 @@ title: "Plug-in Architectures With Layrry and the Java Module System"
 date: 2020-04-21T18:54:00+02:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jpms
+  - plugin-architecture
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
