--- a/content/blog/postgres-15-logical-decoding-row-filters-with-debezium.asciidoc
+++ b/content/blog/postgres-15-logical-decoding-row-filters-with-debezium.asciidoc
@@ -3,6 +3,11 @@ title: "Postgres 15: Logical Decoding Row Filters With Debezium"
 date: 2022-12-15T00:00:00+01:00
 draft: false
 markup: adoc
+tags:
+  - postgres
+  - debezium
+  - cdc
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
