--- a/content/blog/postgres-replication-slots-confirmed-flush-lsn-vs-restart-lsn.asciidoc
+++ b/content/blog/postgres-replication-slots-confirmed-flush-lsn-vs-restart-lsn.asciidoc
@@ -3,6 +3,11 @@ title: "Postgres Replication Slots: Confirmed Flush LSN vs. Restart LSN"
 date: 2025-08-05T13:55:00+02:00
 draft: false
 markup: adoc
+tags:
+  - postgres
+  - cdc
+  - replication
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
