--- a/content/blog/quarkus-and-testcontainers.asciidoc
+++ b/content/blog/quarkus-and-testcontainers.asciidoc
@@ -3,6 +3,12 @@ title: "Quarkus and Testcontainers"
 date: 2020-11-28T17:45:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - quarkus
+  - testing
+  - testcontainers
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
