--- a/content/blog/quarkus-qute-test-ride.asciidoc
+++ b/content/blog/quarkus-qute-test-ride.asciidoc
@@ -3,6 +3,11 @@ title: "Quarkus Qute – A Test Ride"
 date: 2020-01-03T10:00:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - quarkus
+  - web-development
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
