--- a/content/blog/resource-bundle-lookups-in-modular-java-applications.asciidoc
+++ b/content/blog/resource-bundle-lookups-in-modular-java-applications.asciidoc
@@ -3,6 +3,11 @@ title: "Resource Bundle Look-ups in Modular Java Applications"
 date: 2021-08-29T18:30:00+02:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - jpms
+  - i18n
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
