--- a/content/blog/single-message-transforms-swiss-army-knife-of-kafka-connect.asciidoc
+++ b/content/blog/single-message-transforms-swiss-army-knife-of-kafka-connect.asciidoc
@@ -3,6 +3,12 @@ title: "Single Message Transformations - The Swiss Army Knife of Kafka Connect"
 date: 2020-05-14T15:30:00+02:00
 draft: false
 markup: adoc
+tags:
+  - kafka
+  - kafka-connect
+  - debezium
+  - cdc
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
