--- a/content/blog/streaming-vs-batch-wrong-dichotomy.asciidoc
+++ b/content/blog/streaming-vs-batch-wrong-dichotomy.asciidoc
@@ -3,6 +3,11 @@ title: "\"Streaming vs. Batch\" Is a Wrong Dichotomy, and I Think It's Confusing
 date: 2025-05-14T10:10:00+02:00
 draft: false
 markup: adoc
+tags:
+  - streaming
+  - data-processing
+  - architecture
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
