--- a/content/blog/the-synchrony-budget.asciidoc
+++ b/content/blog/the-synchrony-budget.asciidoc
@@ -3,6 +3,11 @@ title: "The Synchrony Budget"
 date: 2025-03-18T14:00:00+01:00
 draft: false
 markup: adoc
+tags:
+  - architecture
+  - distributed-systems
+  - microservices
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
