--- a/content/blog/whats-in-a-good-error-message.asciidoc
+++ b/content/blog/whats-in-a-good-error-message.asciidoc
@@ -3,6 +3,10 @@ title: "What's in a Good Error Message?"
 date: 2022-01-12T19:20:00+01:00
 draft: false
 markup: adoc
+tags:
+  - software-engineering
+  - api-design
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
