--- a/content/blog/why-i-joined-decodable.asciidoc
+++ b/content/blog/why-i-joined-decodable.asciidoc
@@ -3,6 +3,11 @@ title: "Why I Joined Decodable"
 date: 2022-11-03T15:00:00+01:00
 draft: false
 markup: adoc
+tags:
+  - career
+  - streaming
+  - flink
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
