--- a/content/blog/zipping-gatherer.asciidoc
+++ b/content/blog/zipping-gatherer.asciidoc
@@ -3,6 +3,11 @@ title: "A Zipping Gatherer"
 date: 2024-03-18T18:12:00+01:00
 draft: false
 markup: adoc
+tags:
+  - java
+  - streams
+  - language-features
+
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
